Update styles, preloader timing, and homepage content
Added Benzin-Regular font and justified text to service summaries in CSS. Set preloader minimum display time to 0ms in JavaScript. Improved and clarified homepage content, updated button text, adjusted section headings, and made minor HTML structure and class name changes for better readability and branding.

--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
               <div class="divider"></div>
 
               <div class="description">
-                <p>Fooliz is a design-driven tech studio, building apps, websites and visuals from a design-first perspective. We craft full-scale digital solutions beyond the launch phase, making sure everything we build works great.</p>
+                <p>Fooliz is a design-driven tech studio, building apps, websites and visuals from a design-first
+                  perspective. We craft full-scale digital solutions beyond the launch phase, making sure everything we
+                  build works great.</p>
               </div>
 
               <div class="cta-button">
                 <a href="#services" class="btn">
-                  <span>schedule a call</span>
+                  <span>let's brainstorm</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -166,10 +168,11 @@
             <div class="about-content">
               <!-- <h2>Clean Code, Wild Design</h2> -->
               <h2 class="about-title-font">
-                  <span class="font-clean-code">Clean Code, </span>
-                  <span class="font-wild-design">Wild Design</span>
-                </h2>
-              <p class="lead">A code-loving creative lab that blends brains with style. We build things that stand out and scale.</p>
+                <span class="font-clean-code">Clean Code, </span>
+                <span class="font-wild-design">Wild Design</span>
+              </h2>
+              <p class="lead">A code-loving creative lab that blends brains with style. We build things that stand out
+                and scale.</p>
               <!-- <p>From strategy to pixels to product launch, our crew goes all in. 
                 We’re the creative partner you didn’t know you needed (but now can’t unsee).</p>-->
 
@@ -179,7 +182,8 @@
                     <!-- <i class="bi bi-check-circle-fill"></i> -->
                     <img src="assets/img/icons/always-on.png" alt="Future Ready Icon" class="feature-icon">
                     <h5>Clean Code</h5>
-                    <p>Code that’s as neat as it is nerdy. Easy to read, easy to scale, and built to last. No spaghetti, no shortcuts, just solid foundations that keep your product running smooth.</p>
+                    <p>Code that’s as neat as it is nerdy. Easy to read, easy to scale, and built to last. No spaghetti,
+                      no shortcuts, just solid foundations that keep your product running smooth.</p>
                   </div>
                 </div>
                 <div class="col-md-6" data-aos="zoom-in" data-aos-delay="450">
@@ -187,7 +191,7 @@
                     <!-- <i class="bi bi-lightbulb-fill"></i> -->
                     <img src="assets/img/icons/launch-ready.png" alt="Future Ready Icon" class="feature-icon">
                     <h5>Wild Design</h5>
-                    <p>Blueprinting what’s next. Your brand deserves more than "meh" ideas and version 1.0 design.</p>
+                    <p>Blueprinting what’s next. Your brand deserves more than "meh" ideas and version 1.0 design. Fooliz believe in strategic design instead of chasing trends.</p>
                   </div>
                 </div>
               </div>
@@ -201,9 +205,8 @@
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right" data-aos-delay="200">
               <div class="testimonial-intro">
-                <h3>They Said It, Not Us</h3>
-                <p>Real words from real people we’ve helped win, launch, grow, and glow up.
-                  Strategic goals? Crushed. Expectations? Outpaced.</p>
+                <h3>Straight From Clients</h3>
+                <p>Words from the leaders we’ve helped launch, scale, and stand out. Strategic goals? Achieved. Expectations? Surpassed.</p>
                 <div class="swiper-nav-buttons mt-4">
                   <button class="slider-prev"><i class="bi bi-arrow-left"></i></button>
                   <button class="slider-next"><i class="bi bi-arrow-right"></i></button>
@@ -385,7 +388,7 @@
         </div>
 
         <div class="row justify-content-center">
-          
+
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="100">
             <div class="service-card position-relative z-1">
               <div class="service-icon">
@@ -579,13 +582,12 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="advertise-1 d-flex flex-column flex-lg-row gap-4 align-items-center position-relative">
+        <div class="faiber-1 d-flex flex-column flex-lg-row gap-4 align-items-center position-relative">
 
           <div class="content-left flex-grow-1" data-aos="fade-right" data-aos-delay="200">
             <span class="badge text-uppercase mb-2">Don't Miss!</span>
             <h2>Extra Perks, No Catch</h2>
-            <p class="my-4">Working with us isn’t just smart — it’s a flex.
-              Get way more than you bargained for (in the best way).</p>
+            <p class="my-4">Working with us isn’t just smart — it’s a flex. Get way more than you bargained for (in the best way).</p>
 
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
@@ -605,14 +607,19 @@
               </div>
             </div>
 
-            <div class="cta-buttons d-flex flex-wrap gap-3">
-              <!-- <a href="#" class="btn btn-primary">contact now</a> -->
-              <!-- <a href="#" class="btn btn-outline">Learn More</a> -->
-            </div>
+            <!-- <div class="cta-buttons d-flex flex-wrap gap-3"> -->
+            <!-- <a href="#contact" class="btn btn-primary">Contact Now</a> -->
+            <!-- <a href="#services" class="btn btn-outline">Learn More</a> -->
+            <!-- </div> -->
+
+            <!-- <div class="cta-buttons d-flex flex-wrap gap-3"> -->
+            <!-- <a href="#contact" class="btn btn-primary">Contact Now</a> -->
+            <!-- <a href="#services" class="btn btn-outline">Learn More</a> -->
+            <!-- </div> -->
           </div>
 
           <div class="content-right position-relative" data-aos="fade-left" data-aos-delay="300">
-            <img src="assets/img/misc/misc-1.webp" alt="Digital Platform" class="img-fluid rounded-4">
+            <img src="assets/img/misc/misc-1.webp" class="img-fluid rounded-4">
             <!-- <div class="floating-card">
               <div class="card-icon">
                 <i class="bi bi-graph-up-arrow"></i>
@@ -624,10 +631,10 @@
             </div> -->
           </div>
 
-          <div class="decoration">
+          <!-- <div class="decoration">
             <div class="circle-1"></div>
             <div class="circle-2"></div>
-          </div>
+          </div> -->
 
         </div>
 
@@ -1267,7 +1274,8 @@
               <div class="plan-header-consultancy">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-box"></i> -->
-                  <img src="assets/img/abstract/ic-subscription-consultation.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-consultation.png" alt="Website Development Icon"
+                    class="service-icon-img">
                 </div>
                 <h3>Consultation</h3>
                 <p>For individuals just getting started</p>
@@ -1301,7 +1309,8 @@
               <div class="plan-header-onetime">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-briefcase"></i> -->
-                  <img src="assets/img/abstract/ic-subscription-subscription.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-subscription.png" alt="Website Development Icon"
+                    class="service-icon-img">
                 </div>
                 <h3>Subscription</h3>
                 <p>For small teams and businesses</p>
@@ -1328,13 +1337,14 @@
             </div>
           </div><!-- End Professional Plan -->
 
-           <!-- Enterprise Plan -->
+          <!-- Enterprise Plan -->
           <div class="col-lg-4 col-md-6" data-aos="zoom-in" data-aos-delay="400">
             <div class="pricing-card-subscription">
               <div class="plan-header-subscription">
                 <div class="plan-icon">
                   <!-- <i class="bi bi-building"></i> -->
-                  <img src="assets/img/abstract/ic-subscription-onetime.png" alt="Website Development Icon" class="service-icon-img">
+                  <img src="assets/img/abstract/ic-subscription-onetime.png" alt="Website Development Icon"
+                    class="service-icon-img">
                 </div>
                 <h3>One Time</h3>
                 <p>For large organizations</p>
@@ -1376,10 +1386,10 @@
             <h2 class="faq-title">Got questions? We’ve got answers</h2>
             <p class="faq-description">No corporate snooze fest here. If you don’t see your question, just ask. We don’t
               bite (much).</p>
-              <div class="faq-arrow">
-                <!-- <i class="bi bi-geo-alt"></i> -->
-                <img src="assets/img/icons/arrow-faq.gif" alt="Website Development Icon" class="faq-icon-img">
-              </div>
+            <div class="faq-arrow">
+              <!-- <i class="bi bi-geo-alt"></i> -->
+              <img src="assets/img/icons/arrow-faq.gif" alt="Website Development Icon" class="faq-icon-img">
+            </div>
             <!-- <div class="faq-arrow d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
               <svg class="faq-arrow" width="200" height="211" viewBox="0 0 200 211" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -1663,13 +1673,8 @@
 
   <!-- Preloader -->
   <div id="preloader">
-    <lottie-player
-      src="assets/img/misc/intro-illustration.json"
-      background="transparent"
-      speed="1"
-      style="width: 100vw; height: 100vh;"
-      loop
-      autoplay>
+    <lottie-player src="assets/img/misc/intro-illustration.json" background="transparent" speed="1"
+      style="width: 100vw; height: 100vh;" loop autoplay>
     </lottie-player>
   </div>
 
@@ -1681,7 +1686,7 @@
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/imagesloaded/imagesloaded.pkgd.min.js"></script>
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  
+
   <!-- Lottie Player -->
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
