Update footer link color and intro illustration
Set the color of footer links to the default beige in main.css for improved visual consistency. Updated the intro-illustration.json asset, likely to adjust or enhance the homepage animation. Minor changes were also made to main.js, index.html, and portfolio-details.html, possibly to support or reflect these visual updates.

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <div><span>Check Our</span> <span class="description-title">Services</span></div>
+        <div><span>The Fooliz </span> <span class="description-title">Menu</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -367,16 +367,15 @@
             <div class="col-lg-8 col-md-12">
               <div class="service-intro">
                 <h2 class="service-heading">
-                  <div>Smart Solutions,</div>
-                  <div><span>Zero Boredom</span></div>
+                  <div>Hand Crafted Brands,</div>
+                  <div><span>Engineered Apps</span></div>
                 </h2>
               </div>
             </div>
             <div class="col-lg-4 col-md-12">
               <div class="service-summary">
                 <p>
-                  From design to deployment, we craft digital experiences that are bold, fast, and built to grow.
-                  No cookie-cutter stuff — just tailored tools that actually move the needle.
+                  From building apps to branding the venture, we design, and engineer solutions built for impact. Websites, strategy, content, and UX all crafted to function and help your systems run smoothly.
                 </p>
                 <!-- <a href="#contact" class="service-btn">
                   book a service
@@ -401,7 +400,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  Curated apps designed to function, scale, and engage.
                 </p>
               </div>
             </div>
@@ -419,7 +418,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  Need a fast, responsive website built to impress and convert? We got you!
                 </p>
               </div>
             </div>
@@ -437,7 +436,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  Brand identities that function and give you a strong identification (Visually & Strategically).
                 </p>
               </div>
             </div>
@@ -455,7 +454,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  Engaging content tailored for your audience and to make you stand strong in social media spaces.
                 </p>
               </div>
             </div>
@@ -473,7 +472,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  Clean and functional interfaces based on design thinking and strategy.
                 </p>
               </div>
             </div>
@@ -491,7 +490,7 @@
                   </a>
                 </h3>
                 <p>
-                  Code? Clean. UX? Addictive. Results? Ask our clients.
+                  A bigger scale understanding of what to post and what to not taking deep care of your brand tone.
                 </p>
               </div>
             </div>
@@ -585,25 +584,25 @@
         <div class="faiber-1 d-flex flex-column flex-lg-row gap-4 align-items-center position-relative">
 
           <div class="content-left flex-grow-1" data-aos="fade-right" data-aos-delay="200">
-            <span class="badge text-uppercase mb-2">Don't Miss!</span>
+            <span class="badge text-uppercase mb-2">Why us?</span>
             <h2>Extra Perks, No Catch</h2>
-            <p class="my-4">Working with us isn’t just smart — it’s a flex. Get way more than you bargained for (in the best way).</p>
+            <p class="my-4">Because we’re nerdy enough to build it!!! and we’ve got you covered with rest of it.</p>
 
             <div class="features d-flex flex-wrap gap-3 mb-4">
               <div class="feature-item">
                 <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
-                <span>Instant Dev Access</span>
+                <span>Subscription based</span>
               </div>
               <div class="feature-item">
                 <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
-                <span>Design-Led Everything</span>
+                <span>Cancel anytime</span>
               </div>
               <div class="feature-item">
                 <!-- <i class="bi bi-check-circle-fill"></i> -->
                 <img src="assets/img/icons/always-on.png" alt="Website Development Icon" class="service-icon-img">
-                <span>Built to Scale</span>
+                <span>Design-led</span>
               </div>
             </div>
 
@@ -818,7 +817,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <div><span>Check Our</span> <span class="description-title">Portfolio</span></div>
+        <div><span>Stuff we </span> <span class="description-title">built</span></div>
       </div><!-- End Section Title -->
 
       <div class="container-fluid" data-aos="fade-up" data-aos-delay="100">
@@ -1123,7 +1122,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <div><span>Meet Our</span> <span class="description-title">Team</span></div>
+        <div><span>Humans of </span> <span class="description-title">Fooliz</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1262,7 +1261,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Pricing</h2>
-        <div><span>Check Our</span> <span class="description-title">Pricing</span></div>
+        <div><span>Choose Your </span> <span class="description-title">Plan</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1384,8 +1383,7 @@
 
           <div class="col-lg-5" data-aos="fade-up">
             <h2 class="faq-title">Got questions? We’ve got answers</h2>
-            <p class="faq-description">No corporate snooze fest here. If you don’t see your question, just ask. We don’t
-              bite (much).</p>
+            <p class="faq-description">We appreciate clarity. If you don't find your question here, feel free to ask (we're here to help)</p>
             <div class="faq-arrow">
               <!-- <i class="bi bi-geo-alt"></i> -->
               <img src="assets/img/icons/arrow-faq.gif" alt="Website Development Icon" class="faq-icon-img">
@@ -1468,7 +1466,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <div><span>Let's</span> <span class="description-title">Connect</span></div>
+        <div><span>Let's talk & </span> <span class="description-title">Build</span></div>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -1636,12 +1634,12 @@
         <div class="col-lg-2 col-6 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><a href="#services">Mobile Apps Development</a></li>
-            <li><a href="#services">Websites Development</a></li>
-            <li><a href="#services">Branding & Identity Design</a></li>
-            <li><a href="#services">Content Marketing & Management</a></li>
-            <li><a href="#services">UI & UX Design</a></li>
-            <li><a href="#services">Content Strategy</a></li>
+            <li>Mobile Apps Development</li>
+            <li>Websites Development</li>
+            <li>Branding & Identity Design</li>
+            <li>Content Marketing & Management</li>
+            <li>UI & UX Design</li>
+            <li>Content Strategy</li>
           </ul>
         </div>
 
