--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -178,16 +178,16 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-4.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-4.webp" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-6.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-6.webp" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-11.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-11.webp" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-12.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/portfolio-12.webp" alt="" class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -433,8 +433,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
-      class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center" style="opacity: 0;"><i
+      class="bi bi-arrow-up-short" style="opacity: 0;"></i></a>
 
   <!-- Preloader -->
   <div id="preloader">
