Update portfolio images and add thumbnails
Replaced portfolio image references in index.html and portfolio-details.html with new PNG thumbnails and a placeholder image. Added multiple new thumbnail images to assets/img/portfolio for improved visual consistency and faster loading.

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -95,7 +95,7 @@
 
     <div>
       <div class="first-layout-portfolio">
-        <img src="assets/img/portfolio/portfolio-5.webp" alt="Portfolio Image" class="img-fluid">
+        <img src="assets/img/portfolio/portfolio-detail-screen-placeholder.png" alt="Portfolio Image" class="img-fluid">
         <h1>Portfolio Details</h1>
       </div>
 
