Update studio description and portfolio images
Revised the studio description in index.html and portfolio-details.html to better reflect services and tone. Updated portfolio images for detail screen placeholder and Chama thumbnail.

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -378,8 +378,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">Fooliz Studio</span>
           </a>
-          <p>We’re a design-driven dev studio building apps, sites, brands, and chaos (the good kind).
-            Based in pixels, powered by passion — and maybe too much coffee.</p>
+          <p>Fooliz, a design-driven dev studio building apps, sites, brands, and curated content for all our clients' needs with passion and a lot of coffee.</p>
           <div class="social-links d-flex mt-4">
             <a href=""><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
